--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,4 +5,11 @@
 html,
 body,
 #__next {
+  height: 100vh;
+  width: 100vw;
+  overflow-x: hidden;
+}
+#__next {
+  display: flex;
+  flex-direction: column;
 }
