--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,9 +5,8 @@
 html,
 body,
 #__next {
-  height: 100vh;
-  width: 100vw;
-  overflow-x: hidden;
+  min-height: 100vh;
+  width: 100%;
 }
 #__next {
   display: flex;
