--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,15 +7,21 @@ body,
 #__next {
   min-height: 100vh;
   width: 100%;
+  overflow-x: hidden;
 }
 #__next {
   display: flex;
   flex-direction: column;
 }
+
 .bytemd-container > div {
-  width: 100%;
+  @apply w-full;
 }
+
 .bytemd {
-  height: 100% !important;
-  width: 100% !important;
+  @apply h-[calc(100vh_-_14rem)] w-full md:h-[calc(100vh_-_12rem)] !important;
+}
+
+.markdown-body {
+  @apply prose;
 }
