--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,15 +5,10 @@
 html,
 body,
 #__next {
-  min-height: 100vh;
   width: 100%;
+  height: 100%;
   overflow-x: hidden;
 }
-#__next {
-  display: flex;
-  flex-direction: column;
-}
-
 .bytemd-container > div {
   @apply w-full;
 }
