--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,7 +14,7 @@ body,
 }
 
 .bytemd {
-  @apply !h-[calc(100vh_-_18rem)] !w-full sm:!h-[calc(100vh_-_16rem)];
+  @apply !h-[calc(100vh_-_18rem)] !w-full sm:!h-[calc(100vh_-_16rem)] lg:!h-[calc(100vh_-_12rem)];
 }
 
 .markdown-body {
