Add active link styling
- Added ActiveLink component which is a wrapper for Link component from
Next.js
- Implemented logic to determine the active link based on the current
route
- Updated the side bar to use ActiveLink instead of Link

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,3 +20,7 @@ body,
 .markdown-body {
   @apply !container prose w-full;
 }
+
+.bytemd-toolbar-right [bytemd-tippy-path='5'] {
+  display: none;
+}
